V2.3/后端文档/后端开发文档.md
# ***“一个月完成项目！”详细设计***



| 修订日期   | 版本              | 修订内容                                                     | 修订人      | 审核人 |
| ---------- | ----------------- | ------------------------------------------------------------ | ----------- | ------ |
| 2019/11/22 | v0.01(旧版本称呼) | 数据库设计+基础功能                                          | 刘若尘      | zzj    |
| 2019/11/28 | v1.0              | 数据库修改+功能完善                                          | 刘若尘      | zzj    |
| 2019/1/19  | v1.1              | 数据库定义分离+功能增加                                      | 刘若尘，zzj | zzj    |
| 2020/3/2   | v2.1              | 增加用户数据库定义+功能增加;统计模块修改                     | 刘若尘      | zzj    |
| 2020/3/8   | v2.2              | 修改文档结构;dashboard()内容增加                             | 刘若尘      |    zzj    |
| 2020/4/11  | V2.3.2            | 增加了功能;修改文档结构,现在分为4大模块+主页;增加用户数据库定义; | 刘若尘      |     zzj   |



[TOC]



## 1数据库设计



### 1.1Django内数据库定义

```python
from django.db import models
from django.contrib.auth.models import AbstractUser

class Jobinfo(models.Model):
    jobName = models.CharField(db_column='jobName', max_length=250)  # Field name made lowercase.
    company = models.CharField(max_length=250)
    address = models.CharField(max_length=250)
    salary = models.CharField(max_length=250)
    date = models.CharField(max_length=250)
    exp = models.CharField(max_length=250)
    edu = models.CharField(max_length=250)
    offerNumber = models.CharField(db_column='offerNumber', max_length=250)  # Field name made lowercase.
    jobInfo = models.TextField(db_column='jobInfo')  # Field name made lowercase.
    companyType = models.CharField(db_column='companyType', max_length=250)  # Field name made lowercase.
    staffNumber = models.CharField(db_column='staffNumber', max_length=250)  # Field name made lowercase.
    companyOrientation = models.CharField(db_column='companyOrientation', max_length=250)  # Field name made lowercase.
    jobURL = models.CharField(db_column='jobURL', max_length=255)  # Field name made lowercase.
    unifyName = models.CharField(db_column='unifyName', max_length=255, blank=True, null=True)  # Field name made lowercase.

    class Meta:
        db_table = 'jobinfo'
        unique_together = (('jobName', 'company', 'date'),)

class User(AbstractUser):
    username = models.CharField(max_length=16,primary_key=True,verbose_name='用户名')
    password = models.CharField(max_length=128,verbose_name='密码')


    name = models.CharField(max_length=32, blank=True,verbose_name='真实姓名')
    sex = models.CharField(max_length=32,choices=[('male','男'),('female','女')],default='male',verbose_name="性别")
    age = models.IntegerField(null=True, blank=True,verbose_name='年龄')
    email = models.EmailField(blank=True,null=True,verbose_name='邮箱地址')
    phone = models.BigIntegerField(blank=True, null=True,verbose_name='手机号码')
    address = models.CharField(max_length=128, blank=True,verbose_name='工作地址')
    workingYear = models.CharField(max_length=32,blank=True,verbose_name='工作年龄')
    salaryWanted = models.FloatField(null=True,verbose_name='期望薪水')
    blog = models.URLField(blank=True,null=True,verbose_name='博客地址')
    edu = models.CharField(max_length=16, blank=True,verbose_name='教育水平')
    glory = models.TextField(blank=True,verbose_name='获得荣耀')
    exp = models.TextField(blank=True,verbose_name='工作经验')
    description = models.TextField(blank=True,verbose_name='个人经历')
    professioanlSkill = models.CharField(max_length=256,blank=True,verbose_name='专业技能')
    personalSkill = models.CharField(max_length=256, blank=True, verbose_name='个人技能')
    toolSkill = models.CharField(max_length=256, blank=True, verbose_name='工具使用技能')


    def __str__(self):
        return self.username

    class Meta:
        db_table='user'
        verbose_name = '用户信息'
        verbose_name_plural = '用户信息'



```



## 2模块设计

### 2.1工具方法

### 1.login_auth(func,*args,**kwargs)

+ **Function**:一个检验用户是否登入的装饰器

+ **Input**：

  ​			**1.func(function):**需要进行用户登入检验的模块

+ **Output**:

  ​			response(object):对应函数的输出

  ​			or

  ​			HttpResponse('请先登入')

### 2.get_session_value(request,key)

+ **Function:**获得用户的会话值

+ **Input:**

  ​		**1.key(String):**保存session的键

+ **Output:**

  ​		**1.value:**session键对应的值

### 3.page_not_found(request):

+ **Function:**处理未知url

+ **Input:**

  ​		无

+ **Output:**

  ​         返回404页面

### 2.2主页

### 1.home(request):

+ **Function:**首页页面

+ **Input:**

  ​			无

+ **Output:**

  ​			**1.jobinfo_n(int):** 数据库内所有记录的数量

  ​			**2.username(String)**:用户名

  ​			**3.is_admin(Boolean):**是否是管理员



### 2.3仪表盘模块

该模块功能由**static.py**+**dashBoard.py**2个文件共同组合完成

### 1.dashboard(request,kwargs):

 + **Function:**仪表盘,展示总的数据统计结果

 + **Input:**无

 + **Output:**

   ​			**1.lab(list):**groupByOneFeature()的返回值lables

   ​			**2.val(list):**groupByOneFeature()的返回值values

   ​			**3.lab2(list):**groupByTwoFeatures()的返回值lables

   ​			**4.val2(list):**groupByTwoFeatures()的返回值values

   ​			**5.ofs_w(list):**offersInWeek()的返回值[labels,values]

   ​			**6.cmp_o(list):**companyOrientationDistribution()的返回值[labels,values]

   ​			**7.username(String):**用户名

   ​			**8.top5_sal_result(list):**topSalary()的返回值列表化

   ​			**9.top5_offer_result(list):**offerNumberIncreaseTop5InMonth()的返回值列表化

   ​			**10.avg_sal_this_month(list):**avgSalryInMonth()的返回值列表化

   ​			**11.avg_sal_every_month(list):**avgSalaryEveryMonth()的返回值列表化

   ​			**12.offer_change(list):**offerNumberPercentChangeBetweenLastMonthAndThisMonth()的返回值列表化

   ​			**13.top5_sal_diff(list):**这个周期减去上一周期的薪水差距，列表中的元素为列表，每个列表中第一个元素为

   ​												职业名，第二个元素为薪水差值

   ​			**14.top5_offer_diff(list):**offerNumberIncreaseTop5InMonth()的返回值increaseNumberList

   ​			**15.today_fetch(int):**全局变量,今日爬取的数据量大小

   ​			**16.jobinfo_n(int):**数据库内总共的爬取数量

   ​			**17.start_day(String):**爬取开始时间

   ​			**18.end_day(String):**今日日期

   ​			渲染仪表盘内容

### 2.get_jobinfo(request,**kwargs)
+ **Function:** 原来的统计功能的汇总，接受请求返回地图分布信息，各个职位的不同属性下的薪职的平均值，最大值，最小值情况，以及offer列表值那是

+ **Input:**请求

+ **Output：**

  ​		{"job_dices": job_dices,  薪职分片  
           "offers": offers,  offer数量  
           "unifyName": unifyName,  当前用户选择的职位名  
           "total_pages": total_pages,  总页数  
           "page": page,  当前页数  
           "per_page": per_page,  下一页的记录数  
           'jobinfo_n': jobinfo_n,  所有数据库内记录的数量，单位为万  
           'uName': uName,  数据库统一命名的职位名称的列表  
           'special': special,  C#特殊情况  
           'username': username,  用户名  
           'lab': lab, 五个分类标签  
           "data": result,  标签对应的工资平均，最大，最小值  
           "option": option, 用户选择的分类名字  
           'areaList': areaList, 地图分布列表  
           'countList': countList, 地图分布数量列表  
           'avgSalary': avgSalary 当前职业无分类情况下的平均工资}




### 3.get_groupByOneFeature(request)

+ **Function:**接受ajax的请求值，调用groupByOneFeature，并返回对应值

+ **Input:**ajax发来的值

+ **Output：**

  ​			{"result":result,'jobinfo_n':jobinfo_n}

  ​			Json格式

  ​			1.result(list):单筛选的结果标签，包括2个list，一个是标签，一个是值

  ​			2.jobinfo_n:所有offer的数量

### 4.get_groupByTwoFeatures(request)

+ **Function:**接受ajax的请求值，调用groupByTwoFeature，并返回对应值

+ **Input:**ajax发来的值

+ **Output：**

  ​			{"result":result,'jobinfo_n':jobinfo_n}

  ​			Json格式

  ​			1.result(list):单筛选的结果标签，包括2个list，一个是标签，一个是值

  ​			2.jobinfo_n:所有offer的数量



### static.py

### 1.get_data():

+ **Function:**从数据库中读取数据


  - **Input:**无.

- **Output:**

  ​          **1.df(DataFrame)**:返回数据库中所有记录.



### 	2.count_Salary(df,option):

+ **Function:**返回分组得到的记录


  - **Input:**

    ​		 **1.df(DataFrame):**数据库记录

    ​         **2.option(str)：**前端发来的字段

- **Output:**

  ​		 **1.salary_companyType(DataFrame)**:分组后的记录表


### 3.groupByOneFeature(df,options):

+ **Function:** 根据options标签分组数据库记录，返回分组数量前十的记录
  - **Input:**
    ​		 **1.df(DataFrame):** 数据库记录  
    ​        **2.option(str)：** 前端发来的字段

- **Output:**  
  ​		 **1.labels**:分组的内容  
  **2.values**:组内的数量

### 4.groupByTwoFeatures(df,options):

+ **Function:** 根据option属性列表进行组合,如['exp','salary']，返回组合后数量前五的标签和数量

  - **Input:**

    ​		 **1.df(DataFrame):** 数据库记录

    ​         **2.option(str)：** 前端发来的字段

- **Output:**  
  ​		 **1.labels**:分组的内容  
  **2.values**:组内的数量

### 5.offersInWeek(df):

+ **Function:** 一周内发布招聘信息发送数量
  - **Input:**
    ​		 **1.df(DataFrame):** 数据库记录

- **Output:**  
  ​		 **1.labels** :7天内的日期  
        **2.values** :每天的招聘数  

### 6.companyOrientationDistribution(df):

+ **Function:** 公司发展方向分布,饼状图，无需排大小
  - **Input:**
    ​		 **1.df(DataFrame):** 数据库记录

- **Output:**  
  ​		 **1.labels** :公司发展方向  
        **2.values** :每个方向对应的公司数量

### 7.addressDistribution(df):

+ **Function:** 公司地区分布，保留address“-”前的地区，并且保留发布数量前10的地区，饼状图
  - **Input:**
    ​		 **1.df(DataFrame):** 据库记录

- **Output:**  
  ​		 **1.labels**:发布数量前十的地区名  
         **2.values**:对应的招聘数量

  

  

### dashBoard.py

### 1.offerNumberIncreaseTop5InMonth(df_range_0_30,df_range_30_60):

​	定义30天为一个周期。

+ **Function:**得到2个周期内offer数量上升速度前五的职业

+ **Input:** 

  ​         **1.df_range_0_30(DataFrame):**这个周期的记录

  ​		 **2.df_range_30_60(DataFrame):**上个周期的记录

+ **Output:**

  ​		**1.unfiyNameList(list):**offer增速前五的职业名

  ​		**2.increaseNumberList(list):**offer增量

  ​		**3.offerNumberList(list):**这个周期的offer数量

### 2.get_msal_and_offer(df,args):

+ **Function:**查询给定unifyName的平均工资和offer数量

+ **Input:**

  ​		**1.df(DataFrame):**使用的数据

  ​		**2.args(list):**需要查询的unifiyName

+ **Output:**

  ​		**1.unifyNameList(list):**查询的unifyName

  ​		**2.avgSalaryList(list):**给定unifyName的平均工资

  ​		**3.offerNumberList(list):**给定unifyName的offer数

 ### 3.transDateToMonthDay(df):

+ **Function:** 将dataframe的date属性转为非格式化的月-日形式  
    eg：2020-03-06->3-6

+ **Input:** 

  ​		**df(DataFrame):** 使用的数据

+ **Output:**

  ​		**df(DataFrame):** 转变后的dataframe

 ### 4.transDateToMonth(df):

+ **Function:** 将dataframe的date属性转为非格式化的月形式  
    eg：2020-03-06->3

+ **Input:** 

  ​		**df(DataFrame):** 使用的数据

+ **Output:**

  ​		**df(DataFrame):** 转变后的dataframe

 ### 5.getDashBoardDataToDF(df):

+ **Function:** 专门给仪表盘的数据，需要unifyName和salary，并且将salary转为平均工资
+ **Input:** 

  ​		**jobinfo:** django.Module

+ **Output:**

  ​		**df(DataFrame):** 转变后的dataframe

 ### 6.topSalary(df):

+ **Function:** 平均工资前5的职位
+ **Input:** 

  ​		**df(DataFrame):** 使用的数据

+ **Output:**

  ​		top5UnifyNameList 平均前五职位列表  
     top5AverageList 前五职位对应的平均工资,保留小数点后2位，单位万/月  
     top5OfferNumberList 前五对应的offer数量

 ### 7.avgSalryInMonth(df):

+ **Function:** 当月所有unifyName的平均薪水

+ **Input:** 

  ​		**df(DataFrame):** 使用的数据

+ **Output:**

  ​		unifyNameList职位列表  
     avgSalaryList职位对应的平均工资,保留小数点后2位，单位万/月

 ### 8.avgSalaryEveryMonth(df):

+ **Function:** 返回每个月全部offer的平均薪资

+ **Input:** 

  ​		**df(DataFrame):** 使用的数据

+ **Output:**

  ​		dateList 月份列表  
     avgSalaryList 月份列表对应的平均薪资

 ### 9.offerNumberPercentChangeBetweenLastMonthAndThisMonth(df):

+ **Function:** 今天和上个月同日的offer数量以及变化率

+ **Input:** 

  ​		**df(DataFrame):** 使用的数据

+ **Output:**

  ​		percentChange 变化率（%）  
     lastMonthOfferNumber 上月同日的offer数量  
     thisMonthOfferNumber 今天的offer数量


### 2.4用户模块

### 1.login(request):

 + **Function**:用户登入

 + **Input**：用户从前端传来的表单

 + **Output**：

   ​			以下效果按从上到下的优先级顺序

   ​			**1.如果session值is_login不为None:**
   
   ​				表明用户已登入，返回首页
   
   ​			**2.如果请求为GET:**
   
   ​			     返回登入页面
   
   ​			**3.如果请求为POST:**
   
   ​				检验登入表单的正确性,错误则返回相应的错误信息。
   
   ​				若正确，则session记录2个键值 ’is_login', 'username'
   
   ​			    并返回主页面。

### 2.logout(request):

 + **Fucntion**:注销登入

 + **Input**:无

 + **Output**:

   ​			销毁session记录is_login
   
   ​			并返回主页。

### 3.register(request):

+ **Function:**用户注册

+ **Input:**

  ​		用户从前端传来的表单

+ **Output:**

  ​		**1.如果请求为GET:**

  ​			返回注册页面

  ​		**2.如果请求为POST:**

  ​			检验注册表单的正确性,错误则返回相应的错误信息。

  ​			若正确,则将用户信息写入数据库

### 4.profile(request):

 + **Function**:修改用户的个人信息，并利用能力分类模型将用户的个人信息进行能力分类

 + **Input:**

   ​			用户前端传来的表单

 + **Output**：

   ​			**1.如果请求为GET:**
   
   ​				从数据库里读取用户信息，返回填写到表单中。
   
   ​			**2.如果请求为POST:**
   
   ​				检验个人信息表达的正确性，错误则返回相应的错误信息。
   
   ​				若正确，则利用模型将用户的个人信息进行分类，
   
   ​				更新用户的个人信息，并将结果返回填写到表单中。

### 5.profileDownload(request,**kwargs):

+ **Function:**将用户的信息填入预先设定好的简历模板中,并提供下载

+ **Input:**

  ​		无

+ **Output:**

  ​		用户下载得到简历，简历为docx

  

### 2.5职业匹配模块

### 1. recommand(request,**kwargs)

+ **Function**:对用户输入的简历进行职业匹配，并返回相关职业的能力词云和Offer招聘详细表格数据

+ **Input**：前端表单提交的用户输入简历字符串或Offer表格页码.

+ **Output**:  
    + 默认输出：
        {'jobinfo_n': jobinfo_n, 'username':username, 'profile':profile}  
        分别为：当前存储数据量、当前用户名和用户简历；
    + 职业匹配输出：  
        {"result": result, "jobinfo": jobinfoDict, "unifyName": unifyName, "offers": offers, "page": page,"total_pages": total_pages, "abilityDict": abilityDict,'username': username}  
        分别为：匹配职业结果、匹配职业Offer信息表信息、职业名、offer数量、offer每页数量、offer页数、词云字典和用户名；
    + Offer表格换页输出：
        {"jobinfo": jobinfoDict, "unifyName": unifyName, "offers": offers, "page": page, "total_pages": total_pages, 'username': username}  
        分别为：匹配职业Offer信息表信息、职业名、offer数量、offer每页数量、offer页数和当前用户名；
    
### 2. sendTableData(unifyName, page)

+ **Function**:对职业名和指定页码，返回该页offer表格信息。

+ **Input**：职业名和需跳转页码

+ **Output**:  
    该页offer表格信息、offer数量和offer页数。

### 3. big_data.AbilityWordCloudNLP.wordCloud.getWordCloudData(unifyName)

+ **Function**:通过unifyName得到数据库最新前50个jobinfo的个人技能，专业技能，工具使用的词频列表

+ **Input**: 职位统一名

+ **Output**:  专业技能词频高->低的词语列表  
label1CountList 专业技能词频高->低的频率列表  
label2WordList 个人技能词频高->低的词语列表  
label2CountList 个人技能词频高->低的频率列表  
label3WordList 工具使用词频高->低的词语列表  
label3CountList 工具使用词频高->低的频率列表  

### 4. sort_salary_median(jobinfoDict, expectedSalary, sortOrNot)
+ **Function**:对表格中Offer信息按薪资进行中值排序

+ **输入** ：相关职业方向offer信息字典，期望薪资数目，排序方式

+ **Output**:  
    返回完成对相关职业方向offer排序的信息列表
